<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.krp.bakingapp.viewModels.RecipeStepInfoViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".views.fragments.RecipeStepInfoFragment">

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/playerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/centerHorizontalGuideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:setPlayerView="@{viewModel.isExoPlayerInitialized}" />

            <android.support.constraint.Guideline
                android:id="@+id/centerHorizontalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <android.support.constraint.Guideline
                android:id="@+id/verticalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <ImageView
                android:id="@+id/stepsThumbnail"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:setStepThumbnail="@{viewModel.stepThumbnailUrl}"
                app:layout_constraintBottom_toTopOf="@+id/bottomHorizontalGuideline"
                app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/centerHorizontalGuideline"
                tools:src="@drawable/recipe_vector" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/instructions"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@{viewModel.instructions}"
                app:layout_constraintBottom_toTopOf="@+id/bottomHorizontalGuideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/verticalGuideline"
                app:layout_constraintTop_toBottomOf="@+id/centerHorizontalGuideline"
                tools:text="2. Whisk the graham cracker crumbs, 50 grams (1/4 cup) of sugar, and 1/2 teaspoon of salt together in a medium bowl. Pour the melted butter and 1 teaspoon of vanilla into the dry ingredients and stir together until evenly mixed." />

            <android.support.constraint.Guideline
                android:id="@+id/bottomHorizontalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.85" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/previousStepBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/custom_button"
                android:onClick="@{(v)->viewModel.onPreviousBtnClicked(v)}"
                android:text="@string/previous_step"
                android:visibility="@{viewModel.previousBtnVisibility}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bottomHorizontalGuideline" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/nextStepBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/custom_button"
                android:onClick="@{(v)->viewModel.onNextBtnClicked(v)}"
                android:text="@string/next_step"
                android:visibility="@{viewModel.nextBtnVisibility}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bottomHorizontalGuideline" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</layout>