...
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragments.RecipeListFragment">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipeListRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.recyclerViewVisibility}"
            android:scrollbars="none" />

        <include
...
